--- a/system-addon/content-src/components/Sections/_Sections.scss
+++ b/system-addon/content-src/components/Sections/_Sections.scss
@@ -4,13 +4,10 @@
     height: 16px;
     margin-bottom: 18px;
 
-    .section-title {
-      float: left;
-    }
-
     .section-info-option {
-      float: right;
-      margin-top: 14px;
+      offset-inline-end: 0;
+      position: absolute;
+      top: 0;
     }
 
     .info-option-icon {
@@ -72,7 +69,6 @@
   }
 
   .section-list {
-    clear: both;
     margin: 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, $card-width);
