--- a/system-addon/content-src/styles/_variables.scss
+++ b/system-addon/content-src/styles/_variables.scss
@@ -23,13 +23,12 @@ $info-option-link-color: #0A84FF;
 $section-empty-grey: rgba($light-grey, 0.4);
 
 $base-gutter: 32px;
-$section-margin: 32px;
+$section-spacing: 40px;
 $grid-unit: 96px; // 1 top site
 
 $icon-size: 16px;
 $smaller-icon-size: 12px;
 
-$wrapper-top-padding: 62px;
 $wrapper-default-width: $grid-unit * 2 + $base-gutter * 1; // 2 top sites
 $wrapper-max-width-small: $grid-unit * 3 + $base-gutter * 2; // 3 top sites
 $wrapper-max-width-medium: $grid-unit * 4 + $base-gutter * 3; // 4 top sites
@@ -63,8 +62,6 @@ $context-menu-item-padding: 3px 12px;
 
 $sidebar-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.08);
 $inner-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
-
-$search-margin-bottom: 40px;
 
 $image-path: 'assets/';
 
